--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,6 @@
 *.dylib
 
 # Test binary, built with `go test -c`
-*.test
 
 # Code coverage profiles and other test artifacts
 *.out
@@ -33,3 +32,6 @@ go.work.sum
 
 # AI
 .qodo
+
+# docker data
+.docker
