--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,6 +33,8 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version-file: go.mod
+      - name: Set up Docker Compose
+        uses: docker/setup-compose-action@v1
       - name: Install Task CLI
         uses: arduino/setup-task@v2
       - name: Tidy Modules
