update: using syntax docker compose v2

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,4 +50,4 @@ jobs:
           flags: unittests
           token: ${{ secrets.CODECOV_TOKEN }}
       - name: cleanup
-        run: docker-compose -f docker/docker-compose.yml down
+        run: docker compose -f docker/docker-compose.yml down
