--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -13,6 +13,12 @@ services:
       - "5432:5432"
     networks:
       - localnet
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U test -d dbkit_test"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+      start_period: 10s
     restart: unless-stopped
 
 networks:
